force-app/main/default/objects/N26_Product_Detail__c/N26_Product_Detail__c.object-meta.xml
<CustomObject>
    <label>N26 Product Detail</label>
    <nameField>
        <displayFormat>N26-{0000000}</displayFormat>
        <label>N26 Product Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>N26 Product Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>