force-app/main/default/objects/N26_Product_Detail__c/fields/Card_Replacement_Cost__c.field-meta.xml
<CustomField>
    <fullName>Card_Replacement_Cost__c</fullName>
    <label>Card Replacement Cost</label>
    <length>255</length>
    <type>Text</type>
</CustomField>