force-app/main/default/objects/N26_Product_Detail__c/fields/N26_Product__c.field-meta.xml
<CustomField>
    <fullName>N26_Product__c</fullName>
    <label>N26 Product</label>
    <referenceTo>N26_Product__c</referenceTo>
    <relationshipLabel>N26 Product Details</relationshipLabel>
    <relationshipName>N26_Product_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>