force-app/main/default/objects/N26_Product_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>N26_Product__c</columns>
    <columns>Country__c</columns>
    <columns>ATM_Fee_in_other_currencies__c</columns>
    <columns>Card_Replacement_Cost__c</columns>
    <columns>Cost_per_Calendar_Month__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>